Add privacy policy page to this site

--- a/faq.html
+++ b/faq.html
@@ -185,7 +185,7 @@
                                     and description, but all data are permanently deleted once users finish a module or leave the Social Media TestDrive website.
                                 </p>
                                 <p>
-                                    <a href="https://app.socialmediatestdrive.org/privacy" target="_none">
+                                    <a href="privacy.html" target="_none">
                     Our privacy policy</a> gives more details.
                                 </p>
                             </div>
@@ -327,7 +327,7 @@
                                 <p>
                                     Social Media TestDrive does not collect or store any personal information. Young people are able to choose from a library of photos when creating posts, upload text, make comments on the simulated social media site, and change their profile name, location,
                                     and description, but all data are permanently deleted once users finish a module or leave the Social Media TestDrive website. We take privacy and safety seriously; see our
-                                    <a href="https://app.socialmediatestdrive.org/privacy" target="_none">privacy policy</a> for more details.
+                                    <a href="privacy.html" target="_none">privacy policy</a> for more details.
                                 </p>
                             </div>
                         </div>
@@ -397,7 +397,7 @@
                     <a href="terms.html" class="footer-link">Terms & Copyright</a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://app.socialmediatestdrive.org/privacy" class="footer-link">Privacy Policy</a>
+                    <a href="privacy.html" class="footer-link">Privacy Policy</a>
                 </div>
                 <div class="col-auto">
                     <a href="mailto:socialmediatestdrive@gmail.com" target="_top" class="footer-link">
