--- a/press.html
+++ b/press.html
@@ -230,7 +230,7 @@
                     <a href="terms.html" class="footer-link">Terms & Copyright</a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://app.socialmediatestdrive.org/privacy" class="footer-link">Privacy Policy</a>
+                    <a href="privacy.html" class="footer-link">Privacy Policy</a>
                 </div>
                 <div class="col-auto">
                     <a href="mailto:socialmediatestdrive@gmail.com" target="_top" class="footer-link">
