--- a/team.html
+++ b/team.html
@@ -135,9 +135,7 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:jlw43@cornell.edu" target="_blank" class="noDecorationText">
-                                                Dr. Janis Whitlock</a> is the Social Media TestDrive Project Co-Founder and currently contributes to module evaluation oversight. She is an Emerita Research Scientist at Cornell
-                            University.
+                            <span class="hyperlinkBlue">Dr. Janis Whitlock</span> is the Social Media TestDrive Project Co-Founder and currently contributes to module evaluation oversight. She is an Emerita Research Scientist at Cornell University.
                         </p>
                     </div>
                 </div>
@@ -148,8 +146,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="https://difranzo.com/" target="_blank"> Dr. Dominic DiFranzo</a> is the developer of the TestDrive platform and advises the technical development team. He is an Assistant Professor in the Department of Computer Science
-                            & Engineering at Lehigh University.
+                            <a href="https://difranzo.com/" target="_blank" class="noDecorationText"> Dr. Dominic DiFranzo</a> is the developer of the TestDrive platform and advises the technical development team. He is an Assistant Professor in the Department
+                            of Computer Science & Engineering at Lehigh University.
                         </p>
                     </div>
                 </div>
@@ -160,8 +158,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:ald17@cornell.edu" target="_blank" class="noDecorationText">Amanda Purington</a> contributes to content development and is conducting an outcome evaluation on TestDrive as part of her doctorate in Communication.
-                            She is the Director of Evaluation and Research at ACT for Youth project in the Bronfenbrenner Center for Translational Research and a graduate student in the Department of Communication at Cornell University.
+                            <span class="hyperlinkBlue">Amanda Purington</span> contributes to content development and is conducting an outcome evaluation on TestDrive as part of her doctorate in Communication. She is the Director of Evaluation and Research
+                            at ACT for Youth project in the Bronfenbrenner Center for Translational Research and a graduate student in the Department of Communication at Cornell University.
                         </p>
                     </div>
                 </div>
@@ -172,9 +170,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:wz434@cornell.edu" target="_blank" class="noDecorationText"> Dr. Ellen (Wenting)
-                                                Zou</a> is involved in the evaluation, redesign, and analytics of TestDrive. She is currently leading the development of an AI-based conversational agent system to provide personalized
-                            feedback to learners on TestDrive. She is a Postdoctoral Research Associate in the Social Media Lab.
+                            <span class="hyperlinkBlue">Dr. Ellen (Wenting) Zou</span> is involved in the evaluation, redesign, and analytics of TestDrive. She is currently leading the development of an AI-based conversational agent system to provide
+                            personalized feedback to learners on TestDrive. She is a Postdoctoral Research Associate in the Social Media Lab.
                         </p>
                     </div>
                 </div>
@@ -185,8 +182,7 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:dlf92@cornell.edu" target="_blank" class="noDecorationText">
-                                Diana Freed </a> contributes to content development for the TestDrive Project. She is a PhD candidate in the Department of Computing and Information Science at Cornell University.
+                            <span class="hyperlinkBlue">Diana Freed </span> contributes to content development for the TestDrive Project. She is a PhD candidate in the Department of Computing and Information Science at Cornell University.
                         </p>
                     </div>
                 </div>
@@ -197,7 +193,7 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="https://www.cs.cornell.edu/~danco/" target="_blank" class="noDecorationText"> Dr. Dan Cosley</a> provides support for the design and content development of the TestDrive project.
+                            <span class="hyperlinkBlue">Dr. Dan Cosley</span> provides support for the design and content development of the TestDrive project.
                         </p>
                     </div>
                 </div>
@@ -208,8 +204,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:ald52@cornell.edu" target="_blank" class="noDecorationText"> Ashley Shea </a> provides support for the content development of the TestDrive project. She is a PhD candidate in the Department of Communication
-                            at Cornell University and the Head of Instruction Initiatives at Cornell Library.
+                            <span class="hyperlinkBlue">Ashley Shea </span> provides support for the content development of the TestDrive project. She is a PhD candidate in the Department of Communication at Cornell University and the Head of Instruction
+                            Initiatives at Cornell Library.
                         </p>
                     </div>
                 </div>
@@ -220,7 +216,7 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:wh394@cornell.edu" target="_blank" class="noDecorationText"> Winice Hui</a> is the TestDrive application developer. She is currently an Applications Programmer in the Department of Communication at Cornell University.
+                            <span class="hyperlinkBlue"> Winice Hui</span> is the TestDrive application developer. She is currently an Applications Programmer in the Department of Communication at Cornell University.
                         </p>
                     </div>
                 </div>
@@ -231,8 +227,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:eh552@cornell.edu" target="_blank" class="noDecorationText"> Eunice Han</a> assists with the outcome evaluation study on TestDrive and contributes to TestDrive's outreach and professional development efforts.
-                            She is currently the lab manager for the Social Media Lab in the Department of Communication at Cornell University.
+                            <span class="hyperlinkBlue">Eunice Han</span> assists with the outcome evaluation study on TestDrive and contributes to TestDrive's outreach and professional development efforts. She is currently the lab manager for the Social
+                            Media Lab in the Department of Communication at Cornell University.
                         </p>
                     </div>
                 </div>
@@ -334,7 +330,7 @@
                     <a href="terms.html" class="footer-link">Terms & Copyright</a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://app.socialmediatestdrive.org/privacy" class="footer-link">Privacy Policy</a>
+                    <a href="privacy.html" class="footer-link">Privacy Policy</a>
                 </div>
                 <div class="col-auto">
                     <a href="mailto:socialmediatestdrive@gmail.com" target="_top" class="footer-link">
