--- a/for_parents.html
+++ b/for_parents.html
@@ -165,7 +165,7 @@
                     </h4>
                     <h4>
                         We take privacy and safety seriously; see our
-                        <a href="https://app.socialmediatestdrive.org/privacy" target="_none">
+                        <a href="privacy.html" target="_none">
               privacy policy</a> for more details.
                     </h4>
                 </div>
@@ -250,7 +250,7 @@
                     <a href="terms.html" class="footer-link">Terms & Copyright</a>
                 </div>
                 <div class="col-auto">
-                    <a href="https://app.socialmediatestdrive.org/privacy" class="footer-link">Privacy Policy</a>
+                    <a href="privacy.html" class="footer-link">Privacy Policy</a>
                 </div>
                 <div class="col-auto">
                     <a href="mailto:socialmediatestdrive@gmail.com" target="_top" class="footer-link">
