update Natalie + Ellen bio, and user statistic

--- a/team.html
+++ b/team.html
@@ -121,8 +121,8 @@
                     <div class="col-sm-8">
                         <p class="teamText">
                             <a href="https://cals.cornell.edu/natalie-bazarova" target="_blank">
-                                Dr. Natalie Bazarova</a> is the Social Media TestDrive Project Co-Founder and Director. She is an Associate Professor in the Department of Communication and the Director of the Social Media Lab
-                            at Cornell University. She can be contacted at
+                                Dr. Natalie Bazarova</a> is the Social Media TestDrive Project Co-Founder and Director. She is a Professor in the Department of Communication and the Director of the Social Media Lab at Cornell
+                            University. She can be contacted at
                             <a href="mailto:nnb8@cornell.edu" target="_blank" class="noDecorationText">
                                 nnb8@cornell.edu</a>.
                         </p>
@@ -171,7 +171,7 @@
                     <div class="col-sm-8">
                         <p class="teamText">
                             <span class="hyperlinkBlue">Dr. Ellen (Wenting) Zou</span> is involved in the evaluation, redesign, and analytics of TestDrive. She is currently leading the development of an AI-based conversational agent system to provide
-                            personalized feedback to learners on TestDrive. She is a Postdoctoral Research Associate in the Social Media Lab.
+                            personalized feedback to learners on TestDrive. She is an Assistant Professor in the Department of Educational Psychology and the Institute for Computational and Data Sciences at Penn State University.
                         </p>
                     </div>
                 </div>
