Add outcome evaluation banner 3 to home page, update research and privacy page, update user analytics image

--- a/privacy.html
+++ b/privacy.html
@@ -111,23 +111,23 @@
                     Media Lab and Social Media TestDrive and enhances your experience using the Social Media TestDrive Service.
                 </p>
                 <p class="privacyParagraph">
-                    Please also see our Terms of Use, which are available at <a href="https://socialmediatestdrive.org/terms.html" class="noDecorationText">https://socialmediatestdrive.org/terms.html</a>, which, together with this Policy, govern the use
-                    of the Service. If you are a youth user, we encourage you to read this Policy and the applicable Terms of Use with your parent/guardian/teacher before using the Service and not to use the Service if you or your parent/guardian/teacher
-                    disagrees with any part of this Policy or the Terms of Use. By using the Service, you signify agreement to the terms and conditions of this Policy and the Terms of Use. Please note, however, that this Policy and the Terms of Use apply
-                    solely to your use of the Service and do not govern your use of other websites or mobile applications produced or published by the Social Media Lab.
+                    Please also see our Terms of Use, available at <a href="https://socialmediatestdrive.org/terms.html" class="noDecorationText">https://socialmediatestdrive.org/terms.html</a>, which, together with this Policy, govern the use of the
+                    Service. If you are a youth user, we encourage you to read this Policy and the applicable Terms of Use with your parent/guardian/teacher before using the Service and not to use the Service if you or your parent/guardian/teacher disagrees
+                    with any part of this Policy or the Terms of Use. By using the Service, you signify agreement to the terms and conditions of this Policy and the Terms of Use. Please note, however, that this Policy and the Terms of Use apply solely
+                    to your use of the Service and do not govern your use of other websites or mobile applications produced or published by the Social Media Lab.
                 </p>
                 <p class="privacyParagraph">
-                    The Service is controlled and operated by the Social Media Lab in the United States, and your use of the Service is not intended to subject us to the laws or jurisdiction of any state, country or territory other than that of the United States. We may,
-                    in our discretion, decide to limit the Service’s availability, in whole or in part, to any person, geographic area or jurisdiction we choose, at any time at our sole discretion.
+                    The Service is controlled and operated by the Cornell Social Media Lab in the United States, and your use of the Service is not intended to subject us to the laws or jurisdiction of any state, country or territory other than that of the United States.
+                    We may, in our discretion, decide to limit the Service’s availability, in whole or in part, to any person, geographic area or jurisdiction we choose, at any time at our sole discretion.
                 </p>
 
                 <h3 class="privacySubheader2">
-                    2. What Information is Collected?
+                    2. What Information Do We Collect?
                 </h3>
                 <p class="privacyParagraph">
                     In this Policy, <span class="boldText">Personal Information</span> means information that can be used to identify or contact a specific individual online or offline, such as the individual's name, email address, phone number, or a
-                    persistent identifier that can be used to recognize a user over time and across different sites or services. <span class="boldText">Non-Personal Information</span> is aggregated information, demographic information and other individual
-                    information that does not reveal a person's identity.
+                    persistent identifier that can be used to recognize a user over time and across different sites or services. <span class="boldText">Non-Personal Information</span> is aggregated information, demographic information and other user information
+                    that does not reveal a person's identity.
                 </p>
 
                 <h4 class="privacySubSubheader">
@@ -143,8 +143,9 @@
                 </p>
                 <p class="privacyParagraph">
                     The user activity log data on this site will be used strictly for improving user experience in the future and supporting academic research, and will NOT be disclosed to marketing companies or other third parties who are not directly involved in the provision
-                    of this service. All data used for research purposes will be reported in ways that will NOT reveal any user's identity. Data will be stored in a safe hard drive of the Social Media Lab, in secure Cornell Box folders and Cornell’s Red
-                    Cloud system, which will be only accessible by the research team of Social Media TestDrive. All user activity log data will be destroyed within six months after being collected.
+                    of this service. All data used for research purposes will be reported in ways that will NOT reveal any user’s identity. Data will be stored in a safe hard drive of the Social Media Lab and in secure Cornell Box folders and which will
+                    be only accessible by the research team of Social Media TestDrive. We will keep your individual and activity log data (both Non-Personal Information) on TestDrive for no longer than necessary for research purposes. If you wish to have
+                    your data removed from our database, you can do so anytime by contacting our team at socialmediatestdrive@gmail.com.
                 </p>
                 <p class="privacyParagraph">
                     Users also have the option to provide feedback through an anonymous Qualtrics survey at the end of each module; this survey does not collect any Personal Information. You can access Qualtrics’ Privacy Policy at https://www.qualtrics.com/privacy-statement/.
