--- a/team.html
+++ b/team.html
@@ -171,7 +171,7 @@
                     <div class="col-sm-8">
                         <p class="teamText">
                             <span class="hyperlinkBlue">Dr. Ellen (Wenting) Zou</span> is involved in the evaluation, redesign, and analytics of TestDrive. She is currently leading the development of an AI-based conversational agent system to provide
-                            personalized feedback to learners on TestDrive. She is an Assistant Professor in the Department of Educational Psychology and the Institute for Computational and Data Sciences at Penn State University.
+                            personalized feedback to learners on TestDrive. She is an Assistant Professor in the Department of Educational Psychology, Counseling, and Special Education at Pennsylvania State University.
                         </p>
                     </div>
                 </div>
