updated home and team page

--- a/team.html
+++ b/team.html
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <!-- Diana Freed -->
-                <div class="col-lg-6 addColumnPadding addRowMargin row">
+                <!-- <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
                         <img src="img/people/diana_freed.jpg" class="rounded-circle" alt="Photo of Diana Freed" width="100%">
                     </div>
@@ -185,7 +185,7 @@
                             <span class="hyperlinkBlue">Diana Freed </span> contributes to content development for the TestDrive Project. She is a PhD candidate in the Department of Computing and Information Science at Cornell University.
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <!-- Dan Cosley -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
@@ -198,7 +198,7 @@
                     </div>
                 </div>
                 <!-- Ashley Shea -->
-                <div class="col-lg-6 addColumnPadding addRowMargin row">
+                <!-- <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
                         <img src="img/people/ashley_shea.jpg" class="rounded-circle" alt="Photo of Ashley Shea" width="100%">
                     </div>
@@ -208,7 +208,7 @@
                             Initiatives at Cornell Library.
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <!-- Winice Hui -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
@@ -299,8 +299,8 @@
                     Other Contributors
                 </h3>
                 <p class="teamText">
-                    Nika Ablao, Carmen Chan, Erin Chen, Carina Crabbe, Richa Deshpande, Danielle Freedman, Brenna Garcia, Michael Huang, Yanni Kaldis, Hyun Seo Lee, Lily Lin, Philipp Masur, Katherine Miller, Molly Nagel, Giesha Nunez, Annika Pinch, Alex Rauter, Emily Schemerhorn,
-                    Kelly Stone, Sierra Stone, Ashley Win, Cathy Xie, Cindy Xu, Tianke Zhao, Yutong Zhou, and Colton Zuvich.
+                    Nika Ablao, Carmen Chan, Erin Chen, Carina Crabbe, Richa Deshpande, Diana Freed, Danielle Freedman, Brenna Garcia, Michael Huang, Yanni Kaldis, Hyun Seo Lee, Lily Lin, Philipp Masur, Katherine Miller, Molly Nagel, Giesha Nunez, Annika Pinch, Alex Rauter,
+                    Emily Schemerhorn, Ashley Shea, Kelly Stone, Sierra Stone, Ashley Win, Cathy Xie, Cindy Xu, Tianke Zhao, Yutong Zhou, and Colton Zuvich.
                 </p>
             </div>
 
