Make PD video more prominent on homepage, update user numbers

--- a/webinars.html
+++ b/webinars.html
@@ -42,13 +42,13 @@
             <a href="index.html" class="logoLinkContainer">
                 <img src="img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
                 <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
-          Test<span class="brand">Drive</span>
+                    Test<span class="brand">Drive</span>
                 </span>
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item d-sm-block d-lg-none">
@@ -78,9 +78,9 @@
                             <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
                             <!-- Altered the width, height, and fill -->
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC" class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
-                <path
-                  d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
-              </svg>
+                                <path
+                                    d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
+                            </svg>
                             <b>Donate</b>
                         </a>
                     </li>
@@ -101,14 +101,21 @@
 
             <!-- PD Video -->
             <div class='row justify-content-center pressItemContainer'>
-                <div class='col-lg-12 pressLeftContainer align-items-center'>
+                <div class='col-lg-8 pressLeftContainer align-items-center'>
                     <h3 class="pressText" id='webinarTitle1'>
                         Social Media TestDrive: An Introduction to the Platform and Modules
                     </h3>
                     <a href="https://www.youtube.com/watch?v=4r9-moKGa84&ab_channel=SocialMediaTestDrive" target="_none" style="text-decoration:none;">
                         <button type="button" class="nicelyRoundedButton webinarButton">
-              Watch the Video
-            </button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                class="bi bi-play-circle align-middle" viewBox="0 0 16 16" style="margin:0 6px 0 0;">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                <path
+                                    d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z" />
+                            </svg>
+                            <span class="align-middle">Watch the Video</span>
+                        </button>
+
                     </a>
 
                     <p class="pressText">
@@ -122,6 +129,9 @@
                         A Social Media TestDrive module is a self-guided activity, taking about 20-30 minutes to complete. Each module consists of four key sections: Tutorial, Guided activity, Free play, and Reflection. The design of these sections teach, engage, and prompt
                         students to reflect on the social media concepts, definitions, and prosocial behavior they learn in the module.
                     </p>
+                </div>
+                <div class='col-lg-4 pressLogoContainer d-flex justify-content-center align-items-center'>
+                    <img class="pressLogo" src="img/testDriveLogo.svg" alt='Common Sense Event'>
                 </div>
             </div>
 
@@ -149,23 +159,29 @@
                             Sponsored by <a href="https://www.commonsense.org/education/?utm_source=edWeb&utm_medium=Banner&utm_campaign=June_Webinar_Banner" target="_none">Common Sense Education</a>
                         </p>
                         <a id='webinarLink2' aria-labelledby='webinarLink2 webinarTitle2' target="_blank" href="https://media.edweb.net/edWebinar/?view=20201020edwebnet16" target="_none" style="text-decoration:none;">
-                            <button type="button" class="nicelyRoundedButton" style="margin:20px 6px 20px 0;">
-                Watch the EdWebinar
-              </button>
+                            <button type="button" class="nicelyRoundedButton" style="margin:10px 6px 10px 0;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                    class="bi bi-play-circle align-middle" viewBox="0 0 16 16"
+                                    style="margin:0 3px 0 0;">
+                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                    <path
+                                        d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z" />
+                                </svg>
+                                <span class="align-middle">Watch the EdWebinar</span>
+                            </button>
                         </a>
                         <a href="TD_edWeb Professional Development Webinar_2020-10-20.pptx" target="_blank" style="text-decoration:none;">
-                            <button type="button" class="nicelyRoundedButton webinarButton">
-                Download Slides
-              </button>
+                            <button type="button" class="nicelyRoundedButton webinarButton" style="margin:10px 6px 10px 0;">
+                                Download Slides
+                            </button>
                         </a>
                         <a href="https://home.edweb.net/webinar/commonsense20201020/" target="_blank" style="text-decoration:none;">
-                            <button type="button" class="nicelyRoundedButton" style="margin:20px 0 0px 0;">
-                Read More at EdWeb.net
-              </button>
+                            <button type="button" class="nicelyRoundedButton" style="margin:10px 0 0px 0;">
+                                Read More at EdWeb.net
+                            </button>
                         </a>
                     </div>
-                    <div class='col-lg-5 pressLogoContainer d-flex
-          justify-content-center align-items-center'>
+                    <div class='col-lg-5 pressLogoContainer d-flex justify-content-center align-items-center'>
                         <img class="pressLogo" src="img/webinars/20201020_commonsense-event.png" alt='Common Sense Event'>
                     </div>
                     <div class='col-12 pressLeftContainer align-items-center'>
@@ -204,14 +220,21 @@
                         </p>
                         <a id='webinarLink1' aria-labelledby='webinarLink1 webinarTitle1' href="https://www.youtube.com/watch?v=vdIRx9-XE3U" target="_blank" style="text-decoration:none;">
                             <!-- <p class="pressText">Read more &rsaquo;</p> -->
-                            <button type="button" class="nicelyRoundedButton webinarButton">
-                Watch the Webinar
-              </button>
+                            <button type="button" class="nicelyRoundedButton webinarButton" style="margin:3px 6px 3px 0;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                    class="bi bi-play-circle align-middle" viewBox="0 0 16 16"
+                                    style="margin:0 3px 0 0;">
+                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                    <path
+                                        d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z" />
+                                </svg>
+                                <span class="align-middle">Watch the Webinar</span>
+                            </button>
                         </a>
-                        <a href="TD_4-H Webinar_2020 -12-8.pptx" target="_blank" style="text-decoration:none;">
+                        <a href="TD_4-H Webinar_2020 -12-8.pptx" target="_blank" style="text-decoration:none;" style="margin:3px 6px 3px 0;">
                             <button type="button" class="nicelyRoundedButton webinarButton">
-                Download Slides
-              </button>
+                                Download Slides
+                            </button>
                         </a>
                         <p class="pressText">
                             With a majority of school, afterschool, and recreational activities taking place online for young people due to COVID-19, being responsible citizens of the digital world has become more important than ever. Youth today are motivated to explore social
@@ -246,8 +269,8 @@
                 </div>
                 <div class="col-auto">
                     <a href="mailto:socialmediatestdrive@gmail.com" target="_top" class="footer-link">
-            Contact Us
-          </a>
+                        Contact Us
+                    </a>
                 </div>
             </div>
         </div>
