--- a/index.html
+++ b/index.html
@@ -173,11 +173,39 @@
                     <h4>
                         Social Media TestDrive prepares young people for the online world through experiential learning in a simulated social media environment.
                     </h4>
-                    <a href='/modules.html'>
-                        <button class="nicelyRoundedButton" type="button">
-              Try a module
-            </button>
+                    <a href='/modules.html' style="text-decoration:none;">
+                        <button class="nicelyRoundedButton" type="button" style="margin:3px 6px 3px 0;">
+                        Try a module
+                        </button>
                     </a>
+                    <a style="text-decoration:none;">
+                        <button class="nicelyRoundedButton-large" type="button" style="margin:3px 0 3px 0;" data-toggle="modal" data-target="#PDVideoModal">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-play-circle align-middle" viewBox="0 0 16 16" style="margin:0 6px 0 0;">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                                <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
+                              </svg> 
+                              <span class="align-middle">Play informational video</span>
+                        </button>
+                    </a>
+                    <div class="modal fade" id="PDVideoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Social Media TestDrive</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                                </div>
+                                <div class="modal-body">
+                                    <video class="smtd_vid" controls poster="img/parents_3.png" preload="none" id="PDVideo">
+                                        <source src="img/smtd_pdvideo_long.mp4" type="video/mp4">
+                                        <source src="img/smtd_pdvideo_long.ogg" type="video/ogg">
+                                        Your browser does not support the video element. Kindly update it to latest version.
+                                    </video>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div id="home_graphic" class="col-md-6">
                     <img id="home_img" src="img/home_1.svg" alt="">
@@ -241,11 +269,7 @@
 
                 </div>
                 <div class='col-md-6'>
-                    <video class="smtd_vid" controls poster="img/parents_3.png" preload="none">
-                        <source src="img/smtd_pdvideo_long.mp4" type="video/mp4">
-                        <source src="img/smtd_pdvideo_long.ogg" type="video/ogg">
-                        Your browser does not support the video element. Kindly update it to latest version.
-                    </video>
+                    <img class="margined-right home_product2" src="img/home_2.png" alt="">
                 </div>
             </div>
 
@@ -380,6 +404,13 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script>
+        $('#PDVideoModal').on('hide.bs.modal', function(e) {
+            var vid = document.getElementById("PDVideo");
+            vid.pause();
+            vid.load();
+        })
+    </script>
 </body>
 
 </html>
