--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
 
         gtag('config', 'UA-145467622-3');
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BVBF8VW9D6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-BVBF8VW9D6');
+    </script>
     <title>Social Media TestDrive</title>
 </head>
 
