Update banner recruitment date

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </svg>
                     <!-- Announcement Banner Text -->
                     <p style="word-break: break-word; white-space: normal;">
-                        <span class="largeText boldText">NOW recruiting educators for January or February!</span> Help us learn how well Social Media TestDrive works! As a thank you, you will receive an
+                        <span class="largeText boldText">NOW recruiting educators for January to March!</span> Help us learn how well Social Media TestDrive works! As a thank you, you will receive an
                         <span class="boldText">$100 Amazon egift card</span> and get to test a beta version of TestDrive with our <span class="boldText">new teacher and learner dashboards</span>. <span class="boldText">Contact
                         <a href="mailto:smtdevaluation@gmail.com" target="_top" class="customHyperlink">smtdevaluation@gmail.com</a> to learn more!</span> You can also find more information
                         <a href="Social Media TestDrive research opp.pdf" target="_none">here</a>.
