--- a/index.html
+++ b/index.html
@@ -116,30 +116,30 @@
 
             <!-- Temporary Announcement Banner -->
             <!-- Comment out when no longer needed -->
-            <div class="row align-items-center announcementBanner">
-                <div class="col-12 d-flex align-items-center">
-                    <!-- Free, open source bootstrap icon: circle fill -->
-                    <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
-                    <!-- Altered the width, height, and fill -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#E94B68" class="bi bi-circle-fill topLeftCircle" viewBox="0 0 16 16">
+            <!-- <div class="row align-items-center announcementBanner">
+                <div class="col-12 d-flex align-items-center"> -->
+            <!-- Free, open source bootstrap icon: circle fill -->
+            <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
+            <!-- Altered the width, height, and fill -->
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#E94B68" class="bi bi-circle-fill topLeftCircle" viewBox="0 0 16 16">
             <circle cx="8" cy="8" r="8" />
-          </svg>
-                    <!-- Free, open source bootstrap icon: megaphone fill -->
-                    <!-- Copied HTML from: https://icons.getbootstrap.com/icons/megaphone-fill/ -->
-                    <!-- Altered the width, height, and fill -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
+          </svg> -->
+            <!-- Free, open source bootstrap icon: megaphone fill -->
+            <!-- Copied HTML from: https://icons.getbootstrap.com/icons/megaphone-fill/ -->
+            <!-- Altered the width, height, and fill -->
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
             <path
               d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-11zm-1 .724c-2.067.95-4.539 1.481-7 1.656v6.237a25.222 25.222 0 0 1 1.088.085c2.053.204 4.038.668 5.912 1.56V3.224zm-8 7.841V4.934c-.68.027-1.399.043-2.008.053A2.02 2.02 0 0 0 0 7v2c0 1.106.896 1.996 1.994 2.009a68.14 68.14 0 0 1 .496.008 64 64 0 0 1 1.51.048zm1.39 1.081c.285.021.569.047.85.078l.253 1.69a1 1 0 0 1-.983 1.187h-.548a1 1 0 0 1-.916-.599l-1.314-2.48a65.81 65.81 0 0 1 1.692.064c.327.017.65.037.966.06z" />
-          </svg>
-                    <!-- Announcement Banner Text -->
-                    <p style="word-break: break-word; white-space: normal;">
+          </svg> -->
+            <!-- Announcement Banner Text -->
+            <!-- <p style="word-break: break-word; white-space: normal;">
                         <span class="largeText boldText">NOW recruiting educators for January to March!</span> Help us learn how well Social Media TestDrive works! As a thank you, you will receive an
                         <span class="boldText">$100 Amazon egift card</span> and get to test a beta version of TestDrive with our <span class="boldText">new teacher and learner dashboards</span>. <span class="boldText">Contact
                         <a href="mailto:smtdevaluation@gmail.com" target="_top" class="customHyperlink">smtdevaluation@gmail.com</a> to learn more!</span> You can also find more information
                         <a href="Social Media TestDrive research opp.pdf" target="_none">here</a>.
                     </p>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Temporary Giving Day/ Donation Banner -->
             <!-- Comment out when no longer needed -->
