Update FAQ question

--- a/faq.html
+++ b/faq.html
@@ -169,8 +169,8 @@
                                     TestDrive is most effective for new social media users or those who are likely to enter into the social media world in the near future. Our target audience is middle school-aged youth, but we welcome everyone to explore it.
                                 </p>
                                 <p>
-                                    Children at these ages are aware of and likely becoming interested in social media, but are unlikely to have their own social media accounts, since most social media platforms require members to be at least 13 years old. This is a great time to learn
-                                    the prosocial skills and behaviors in Social Media TestDrive.
+                                    Children at these ages are aware of and likely becoming interested in social media, and some children even have their own social media accounts. However, many are not yet on social media yet, since most social media platforms require members to be at
+                                    least 13 years old. This is a great time to learn the prosocial skills and behaviors in Social Media TestDrive.
                                 </p>
 
                             </div>
