Move Dan Cosley; Update user numbers

--- a/team.html
+++ b/team.html
@@ -199,7 +199,7 @@
                     </div>
                 </div> -->
                 <!-- Dan Cosley -->
-                <div class="col-lg-6 addColumnPadding addRowMargin row">
+                <!-- <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
                         <img src="img/people/dan_cosley.jpg" class="rounded-circle" alt="Photo of Dan Cosley" width="100%">
                     </div>
@@ -208,7 +208,7 @@
                             <span class="hyperlinkBlue">Dr. Dan Cosley</span> provides support for the design and content development of the TestDrive project.
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <!-- Ashley Shea -->
                 <!-- <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
@@ -244,6 +244,8 @@
                         </p>
                     </div>
                 </div>
+                <!--Blank-->
+                <div class="col-lg-6 addColumnPadding addRowMargin row"></div>
             </div>
         </div>
 
@@ -292,6 +294,9 @@
                 </p>
                 <p class="teamText">
                     <span class="hyperlinkBlue">Dr. Natercia Valle</span> led outreach and professional development efforts related to TestDrive. She was a Postdoctoral Associate in the Department of Communication at Cornell University.
+                </p>
+                <p class="teamText">
+                    <span class="hyperlinkBlue">Dr. Dan Cosley</span> provided support for the design and content development of TestDrive. He was an Associate Professor in Information Science at Cornell University.
                 </p>
             </div>
 
